--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         username: 346741
         password: ${{ secrets.ftp_password }}
         port: 22
-        protocol: ftps
+        METHOD: sftp
         dry-run: true
