Switch to FTP-Deploy-Action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
 on: push
-name: Publish Website
+name: 🚀 Deploy website on push
 jobs:
   web-deploy:
-    name: 🚀 Deploy website every commit
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v2.1.0
+      uses: actions/checkout@v2.3.2
     
     - name: 📂 Sync files
-      uses: SamKirkland/web-deploy@1.0.0
+      uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        target-server: ${{ secrets.TARGET_SERVER }}
-        remote-user: ${{ secrets.REMOTE_USER }}
-        remote-key: ${{ secrets.REMOTE_KEY }}       
+        server: ${{ secrets.TARGET_SERVER }}
+        username: ${{ secrets.REMOTE_USER }}
+        password: ${{ secrets.REMOTE_KEY }}
