--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         server: sftp.beautique-in.nl
         username: 346741
         password: QW2qw2qw
-        local-dir: C:\Users\rk50895\Documents\GitHub\beautique-in\
+        local-dir: C:/Users/rk50895/Documents/GitHub/beautique-in/
         server-dir: /public/sites/www.beautique-in.nl
         exclude: .git*
           - .git*/**
