--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         username: 346741
         password: QW2qw2qw
         local-dir: C:/Users/rk50895/Documents/GitHub/beautique-in/
-        server-dir: /public/sites/www.beautique-in.nl
+        server-dir: /public/sites/www.beautique-in.nl/
         exclude: .git*
           - .git*/**
           - README.md
