--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         server: sftp.beautique-in.nl
         username: 346741
         password: QW2qw2qw
+        port: 22
         server-dir: /public/sites/www.beautique-in.nl/
         exclude: .git*
           - .git*/**
