--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,13 @@ jobs:
       uses: actions/checkout@v2.3.2
     
     - name: SFTP Deploy
-      uses: wlixcc/SFTP-Deploy-Action@1.1
-      with:
-        server: sftp.beautique-in.nl
-        username: 346741
-        ssh_private_key: QW2qw2qw
-        port: 22
-        local_path: './*'
-        remote_path: '/public/sites/www.beautique-in.nl/'
-        args: '-o ConnectTimeout=5'
+      uses: Saylermb/github-sftp-deploy-action@master
+      if: github.event.prerelease == false
+      env:
+        HOST: sftp.beautique-in.nl
+        USER: 346741
+        PASSWORD: QW2qw2qw
+        PORT: 22
+        DIR_ON_SERVER: /public/sites/www.beautique-in.nl/
+        USE_COMMAND_BEFOR_UPDATE: pwd
+        USE_COMMAND_AFTER_UPDATE: ls -la
